# coretext

./: .gitignore  AGENTS.md  ARCHITECTURE.md  GEMINI.md  README.md  backlog.md  e1A.md  evaluation_report.md  sync_coretext.sh  test_engine.py  trore-evaluation-report.md
archive/: check_db.py  gemini-extension.json  pyproject.toml
archive/_coretext/: atomic_step.md  experience.json  experience_schema.json  target_state.md
archive/chat_history/: 1-2_2nd_code-review.md  1-2_code-review.md  1-3_dev-story.md  1-4_2nd_code-review.md  1-4_3rd_code-review.md  1-4_3rd_dev-story.md  1-4_dev-story.md  1-5_create-story.md  1-5_develop-review.md  1_epic_correct-course.md  1_epic_demo_fix.md  1_epic_quick_flow_check.md  1_epic_retrospective.md  2-1_code-review.md  2-1_create-story.md  2-1_dev-story.md  2-2_code-review.md  2-2_create-story.md  2-2_dev-story.md  2-3_code-review.md  2-3_create-story.md  2-3_dev-story.md  2-4_code-review.md  2-4_create-story.md  2-4_dev-story.md  2-5_code-review.md  2-5_quick-flow.md  2-5_retro_dev-story.md  2_epic_test-design.md  3-1_code-review.md  3-1_create-story.md  3-1_dev-story.md  3-2_code-review.md  3-2_create-story.md  3-2_dev-story.md  3-3_code-review.md  3-3_create-story.md  3-3_dev-story.md  3-4_code-review.md  3-4_create-story.md  (+59 more)
archive/commands/: coretext-apply-schema.toml  coretext-init.toml  coretext-inspect.toml  coretext-install-hooks.toml  coretext-lint.toml  coretext-new.toml  coretext-ping.toml  coretext-start.toml  coretext-status.toml  coretext-stop.toml  coretext-sync.toml
coretext_package/: pyproject.toml
logs/: d1A.md  (+58 more)
(+478 files in other folders)
