[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "coretext"
version = "0.1.0"
description = "Coretext Engine - Deterministic State-Driven Development framework"
readme = "README.md"
requires-python = ">=3.8"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[tool.setuptools]
py-modules = ["coretext_engine", "add_rules", "inject_context", "visualize_graph"]
package-dir = {"" = ".coretext"}
